Fri Aug 21 11:57:57 1998  Douglas C. Schmidt  <schmidt@tango.cs.wustl.edu>

	* src/Options.cpp (operator): Fixed '%e' to be '%r' to come up to
 	  speed with ACE changes.

Sat Aug 15 07:59:58 1998  David L. Levine  <levine@cs.wustl.edu>

        * src/gperf.cpp (main): added ACE_UNUSED_ARGS for argc and
          argv if ! ACE_HAS_GPERF.

Fri Aug 14 13:47:00 1998  David L. Levine  <levine@cs.wustl.edu>

        * src/new.cpp (delete): aded ACE_UNUSED_ARG (ptr).

Fri Jul 31 18:28:45 1998  Gonzalo Diethelm  <gonzo@tango.cs.wustl.edu>

        * src/Bool_Array.cpp:
        * src/Gen_Perf.cpp:
        * src/Hash_Table.cpp:
        * src/Iterator.cpp:
        * src/Key_List.cpp:
        * src/List_Node.cpp:
        * src/Options.cpp:
        * src/Vectors.cpp:
        * src/Version.cpp:
        * src/gperf.cpp:
        * src/new.cpp:
        * tests/test.cpp:
        Added ACE_RCSID to these files.

Tue Jul 21 09:30:51 1998  David L. Levine  <levine@cs.wustl.edu>

        * src/gperf.cpp (main): added a trivial main () if ! ACE_HAS_GPERF,
          so that the link succeeds.

Mon Jul 20 16:02:18 1998  David L. Levine  <levine@cs.wustl.edu>

        * src/Makefile: fixed INSTALL.  It works with the latest
          $ACE_ROOT/include/makeinclude/rules.lib.GNU.

Mon Jul 20 15:35:59 1998  Alexander Babu Arulanthu  <alex@cs.wustl.edu>

        * Wrapped all the files with "#if defined (ACE_HAS_GPERF)" so that
        it compiles on appropriate platforms.

Sun Jul 19 22:21:17 1998  David L. Levine  <levine@cs.wustl.edu>

        * src/new.cpp (new): wrapped assignment with parens where used
          as a conditional.

        * src/Iterator.cpp (Iterator), List_Node.cpp (List_Node),
          Hash_Table.cpp (Hash_Table):
          reordered initializers to match declaration order.

        * src/Hash_Table.cpp (~Hash_Table),
        * src/Bool_Array.cpp (init): cast sizeof
          to int to avoid compiler (g++/Linux alpha) warning about